@@ -1,3 +1,7 @@
+2015-09-18 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* Make sure that setup_afs actually picks up python
+	* Better debugging in prepareHistos()
+
 2015-09-10 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
         * adding possibility to display impact of systematics before fit - code proposals by Luigi
         M       scripts/HistFitter.py
